Add some improvements to the development environment.